Fix vertical alignment of active filters count

--- a/client/scss/components/_drilldown.scss
+++ b/client/scss/components/_drilldown.scss
@@ -77,7 +77,7 @@
   $badge-size: theme('spacing.4');
   width: $badge-size;
   height: $badge-size;
-  line-height: $badge-size;
+  line-height: 1.5;
   text-align: center;
   font-size: 0.5625rem;
   font-weight: theme('fontWeight.bold');
